# quant-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: sample_prices.csv
src/quant_mcp_server/: server.py
tests/: test_tools.py
